--- a/colmar/index.html
+++ b/colmar/index.html
@@ -1,1 +1,192 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <title>Colmar Academy</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="logo">
+      <img src="./assets/capstone_colmar_assets/images/ic-logo.svg"/>
+      <span id="logo-text"><strong>COLMAR</strong>ACADEMY</span>
+    </div>
+    <nav class="nav">
+      <a href="#">On campus</a>
+      <a href="#">Online</a>
+      <a href="#">For companies</a>
+      <a href="#">Sign in</a>
+    </nav>
+  </header>
+  <div class="banner">
+    <div class="banner-image">
+      <img src="./assets/capstone_colmar_assets/images/banner.jpg">
+    </div>
+    <div class="banner-content">
+      <div class="banner-text">
+        <h1>Learn something<br/>new everyday</h1>
+        <p><strong>Lorem ipsum dolor sit amet,<br/>consectetur adipisicing elit.</strong></p>
+      </div>
+      <a href="#" class="banner-button">Start here</a>
+    </div>
+  </div>
+  <div class="features">
+    <div class="quote">
+      <div class="quote-image">
+        <img src="./assets/capstone_colmar_assets/images/information-main.jpg">
+      </div>
+      <div class="quote-content">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+    </div>
+    <div class="stories">
+      <a href="#" class="story">
+        <div class="story-image">
+          <img id="desktop-orientation-img" src="./assets/capstone_colmar_assets/images/information-orientation.jpg" alt="Orientation">
+          <img id="mobile-orientation-img" src="./assets/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="Orientation">
+        </div>
+        <div class="story-content">
+          <h3><strong>Orientation date</strong></h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <p class="blue">Read more</p>
+        </div>
+      </a>
+      <a href="#" class="story">
+        <div class="story-image">
+          <img id="desktop-campus-img" src="./assets/capstone_colmar_assets/images/information-campus.jpg" alt="Campus">
+          <img id="mobile-campus-img" src="./assets/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="Campus">
+        </div>
+        <div class="story-content">
+          <h3><strong>Our campus</strong></h3>
+          <p>Find which campus is close by you</p>
+          <p class="blue">Read more</p>
+        </div>
+      </a>
+      <a href="#" class="story">
+        <div class="story-image">
+          <img id="desktop-guest-img" src="./assets/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Guest">
+          <img id="mobile-guest-img" src="./assets/capstone_colmar_assets/images/information-guest-lecture-mobile.jp" alt="Guest">
+        </div>
+        <div class="story-content">
+          <h3><strong>Our guest lecture</strong></h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <p class="blue">Read more</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="learning">
+    <h2>Start learning</h2>
+    <div class="courses">
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-software.jpg" alt="Software">
+        </div>
+        <div class="course-content">
+          <h3><strong>Software engineering</strong></h3>
+          <span>COURSES</span>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-computer-art.jpg" alt="Computer Art">
+        </div>
+        <div class="course-content">
+          <h3><strong>Computer art</strong></h3>
+          <span>COURSES</span>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-design.jpg" alt="Design">
+        </div>
+        <div class="course-content">
+          <h3><strong>Design</strong></h3>
+          <span>COURSES</span>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-data.jpg" alt="Data">
+        </div>
+        <div class="course-content">
+          <h3><strong>Data</strong></h3>
+          <span>COURSES</span>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-business.jpg" alt="Business">
+        </div>
+        <div class="course-content">
+          <h3><strong>Business</strong></h3>
+          <span>COURSES</span>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-image">
+          <img src="./assets/capstone_colmar_assets/images/course-marketing.jpg" alt="Marketing">
+        </div>
+        <div class="course-content">
+          <h3><strong>Marketing</strong></h3>
+          <span>COURSES</span>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="thesis">
+    <h2>Thesis exhibits</h2>
+    <div class="thesis-content">
+      <div class="video-section">
+        <div class="video">
+          <video src="./assets/capstone_colmar_assets/videos/thesis.mp4" controls </video>
+        </div>
+        <div class="video-content">
+          <h3><strong>Reimagine urban</strong></h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+      </div>
+      <div class="stories">
+        <a href="#" class="story">
+          <div class="story-image">
+            <img src="./assets/capstone_colmar_assets/images/thesis-fisma.jpg" alt="Fisma">
+          </div>
+          <div class="story-content">
+            <h3><strong>Fisma: Design and Prototype</strong></h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </a>
+        <a href="#" class="story">
+          <div class="story-image">
+            <img src="./assets/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="Research">
+          </div>
+          <div class="story-content">
+            <h3><strong>Now and then</strong></h3>
+            <p>Research study about New York</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <span class="copyright credit">&copy 2016 Colmar Academy. All rights reserved</span>
+    <nav class="desktop-nav credit">
+      <a href="#">Terms</a>
+      <a href="#">Privacy</a>
+    </nav>
+  </footer>
+</body>
+</html>
 
