--- a/colmar/index.html
+++ b/colmar/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="./assets/capstone_colmar_assets/images/ic-logo.svg"/>
+      <img src="node-ks.github.io/colmar/assets/ic-logo.svg"/>
       <span id="logo-text"><strong>COLMAR</strong>ACADEMY</span>
     </div>
     <nav class="nav">
