--- a/colmar/index.html
+++ b/colmar/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
+  <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   <title>Colmar Academy</title>
 </head>
 
 <body>
   <header class="header">
     <div class="logo">
-      <img src="./assets/capstone_colmar_assets/image/ic-logo.svg"/>
+      <img src="assets/capstone_colmar_assets/image/ic-logo.svg"/>
       <span id="logo-text"><strong>COLMAR</strong>ACADEMY</span>
     </div>
     <nav class="nav">
@@ -23,7 +23,7 @@
   </header>
   <div class="banner">
     <div class="banner-image">
-      <img src="./assets/capstone_colmar_assets/images/banner.jpg">
+      <img src="assets/capstone_colmar_assets/images/banner.jpg">
     </div>
     <div class="banner-content">
       <div class="banner-text">
@@ -36,7 +36,7 @@
   <div class="features">
     <div class="quote">
       <div class="quote-image">
-        <img src="./assets/capstone_colmar_assets/images/information-main.jpg">
+        <img src="assets/capstone_colmar_assets/images/information-main.jpg">
       </div>
       <div class="quote-content">
         <h2>It doesn't hurt to keep practicing</h2>
@@ -47,8 +47,8 @@
     <div class="stories">
       <a href="#" class="story">
         <div class="story-image">
-          <img id="desktop-orientation-img" src="./assets/capstone_colmar_assets/images/information-orientation.jpg" alt="Orientation">
-          <img id="mobile-orientation-img" src="./assets/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="Orientation">
+          <img id="desktop-orientation-img" src="assets/capstone_colmar_assets/images/information-orientation.jpg" alt="Orientation">
+          <img id="mobile-orientation-img" src="assets/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="Orientation">
         </div>
         <div class="story-content">
           <h3><strong>Orientation date</strong></h3>
@@ -58,8 +58,8 @@
       </a>
       <a href="#" class="story">
         <div class="story-image">
-          <img id="desktop-campus-img" src="./assets/capstone_colmar_assets/images/information-campus.jpg" alt="Campus">
-          <img id="mobile-campus-img" src="./assets/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="Campus">
+          <img id="desktop-campus-img" src="assets/capstone_colmar_assets/images/information-campus.jpg" alt="Campus">
+          <img id="mobile-campus-img" src="assets/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="Campus">
         </div>
         <div class="story-content">
           <h3><strong>Our campus</strong></h3>
@@ -69,8 +69,8 @@
       </a>
       <a href="#" class="story">
         <div class="story-image">
-          <img id="desktop-guest-img" src="./assets/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Guest">
-          <img id="mobile-guest-img" src="./assets/capstone_colmar_assets/images/information-guest-lecture-mobile.jp" alt="Guest">
+          <img id="desktop-guest-img" src="assets/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Guest">
+          <img id="mobile-guest-img" src="assets/capstone_colmar_assets/images/information-guest-lecture-mobile.jp" alt="Guest">
         </div>
         <div class="story-content">
           <h3><strong>Our guest lecture</strong></h3>
@@ -85,7 +85,7 @@
     <div class="courses">
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-software.jpg" alt="Software">
+          <img src="assets/capstone_colmar_assets/images/course-software.jpg" alt="Software">
         </div>
         <div class="course-content">
           <h3><strong>Software engineering</strong></h3>
@@ -95,7 +95,7 @@
       </div>
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-computer-art.jpg" alt="Computer Art">
+          <img src="assets/capstone_colmar_assets/images/course-computer-art.jpg" alt="Computer Art">
         </div>
         <div class="course-content">
           <h3><strong>Computer art</strong></h3>
@@ -105,7 +105,7 @@
       </div>
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-design.jpg" alt="Design">
+          <img src="assets/capstone_colmar_assets/images/course-design.jpg" alt="Design">
         </div>
         <div class="course-content">
           <h3><strong>Design</strong></h3>
@@ -115,7 +115,7 @@
       </div>
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-data.jpg" alt="Data">
+          <img src="assets/capstone_colmar_assets/images/course-data.jpg" alt="Data">
         </div>
         <div class="course-content">
           <h3><strong>Data</strong></h3>
@@ -125,7 +125,7 @@
       </div>
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-business.jpg" alt="Business">
+          <img src="assets/capstone_colmar_assets/images/course-business.jpg" alt="Business">
         </div>
         <div class="course-content">
           <h3><strong>Business</strong></h3>
@@ -135,7 +135,7 @@
       </div>
       <div class="course">
         <div class="course-image">
-          <img src="./assets/capstone_colmar_assets/images/course-marketing.jpg" alt="Marketing">
+          <img src="assets/capstone_colmar_assets/images/course-marketing.jpg" alt="Marketing">
         </div>
         <div class="course-content">
           <h3><strong>Marketing</strong></h3>
@@ -151,7 +151,7 @@
     <div class="thesis-content">
       <div class="video-section">
         <div class="video">
-          <video src="./assets/capstone_colmar_assets/videos/thesis.mp4" controls </video>
+          <video src="assets/capstone_colmar_assets/videos/thesis.mp4" controls </video>
         </div>
         <div class="video-content">
           <h3><strong>Reimagine urban</strong></h3>
@@ -161,7 +161,7 @@
       <div class="stories">
         <a href="#" class="story">
           <div class="story-image">
-            <img src="./assets/capstone_colmar_assets/images/thesis-fisma.jpg" alt="Fisma">
+            <img src="assets/capstone_colmar_assets/images/thesis-fisma.jpg" alt="Fisma">
           </div>
           <div class="story-content">
             <h3><strong>Fisma: Design and Prototype</strong></h3>
@@ -170,7 +170,7 @@
         </a>
         <a href="#" class="story">
           <div class="story-image">
-            <img src="./assets/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="Research">
+            <img src="assets/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="Research">
           </div>
           <div class="story-content">
             <h3><strong>Now and then</strong></h3>
