--- a/colmar/index.html
+++ b/colmar/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
+  <link href="resources/css/reset.css" type="text/css" rel="stylesheet" >
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   <title>Colmar Academy</title>
 </head>
@@ -23,7 +23,7 @@
   </header>
   <div class="banner">
     <div class="banner-image">
-      <img src="assets/capstone_colmar_assets/images/banner.jpg">
+      <img src="capstone_colmar_assets/images/banner.jpg">
     </div>
     <div class="banner-content">
       <div class="banner-text">
