--- a/colmar/index.html
+++ b/colmar/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link href="resources/css/reset.css" type="text/css" rel="stylesheet" >
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-  <title>Colmar Academy</title>
+  <title>Colmara Academy</title>
 </head>
 
 <body>
